A working (yet rough) implementation of arguments handling, excursions-list command handler (just for testing).